Fixed weird offset of submit button in contact form on smaller screens

--- a/css/layout.css
+++ b/css/layout.css
@@ -870,6 +870,12 @@ call-to-action .button {
 	border-radius: 3px;
    margin-left: 26%;
 }
+@media only screen and (max-width: 767px)
+{
+   #contact button.button  {
+       margin-left: 0;
+   }
+}
 #contact button.button:hover {
 	color: #0D0D0D;
 	background: #fff;
